# person-detection-snpe-ros2-cpp-api-rb5

./: README.md
custom_msg/: CMakeLists.txt  package.xml
custom_msg/msg/: BBox.msg
pubsub/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
pubsub/include/: qcsnpe.hpp  utils.hpp
pubsub/src/: main.cpp  publisher_member_function.cpp  qcsnpe.cpp  subscriber_member_function.cpp  utils.cpp
